--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ scala:
 
 script:
   - sbt clean coverage test coverageReport
+services:
+  - xvfb
 
 after_success:
   - sbt coverageReport coveralls
